--- a/Guide-Service/src/main/resources/application.properties
+++ b/Guide-Service/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/guideService?createDatabaseIfN
 spring.datasource.hikari.maximum-pool-size=5
 
 server.port=8083
-
+spring.application.name=guide-service
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.jpa.generate-ddl=true
