--- a/Package-Service/src/main/resources/application.properties
+++ b/Package-Service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/PackageService?createDatabaseI
 spring.datasource.hikari.maximum-pool-size=5
 
 server.port=8084
+spring.application.name=package-service
 
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
