--- a/Hotel-Service/src/main/resources/application.properties
+++ b/Hotel-Service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/hotelService?createDatabaseIfN
 spring.datasource.hikari.maximum-pool-size=5
 
 server.port=8085
+spring.application.name=hotel-service
 
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
