--- a/User-Service/src/main/resources/application.properties
+++ b/User-Service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/UserService?createDatabaseIfNo
 spring.datasource.hikari.maximum-pool-size=5
 
 server.port=8080
+spring.application.name=user-service
 
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
