--- a/Vehicle-Service/src/main/resources/application.properties
+++ b/Vehicle-Service/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=1234
 spring.datasource.url=jdbc:mysql://localhost:3306/VehicleService?createDatabaseIfNotExist=true
 
 server.port=8082
+spring.application.name=vehicle-service
 
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
