--- a/service-registry/pom.xml
+++ b/service-registry/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>lk.ijse.travelPackage</groupId>
-	<artifactId>Service-regisrty</artifactId>
+	<artifactId>service-registry</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Service-regisrty</name>
+	<name>service-registry</name>
 	<description>project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
